<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

        <TextView
            android:id="@+id/text_app_title_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/text_app_title_I"
            android:layout_marginTop="120dp"
            android:background="@drawable/title_text"
            android:gravity="center"
            android:text="@string/text_app_title_B"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_app_title_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/text_app_title_N"
            android:layout_marginTop="120dp"
            android:background="@drawable/title_text"
            android:gravity="center"
            android:text="@string/text_app_title_I"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_app_title_N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:background="@drawable/title_text"
            android:gravity="center"
            android:text="@string/text_app_title_N"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_app_title_G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/text_app_title_N"
            android:layout_marginTop="120dp"
            android:background="@drawable/title_text"
            android:gravity="center"
            android:text="@string/text_app_title_G"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_app_title_O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/text_app_title_G"
            android:layout_marginTop="120dp"
            android:background="@drawable/title_text"
            android:gravity="center"
            android:text="@string/text_app_title_O"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_rounded_corners"
            android:layout_below="@id/text_app_title_N"
            android:text="@string/button_new_game" />
        <!--<Button-->
            <!--android:id="@+id/button_resume"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/button_resume" />-->

</RelativeLayout>